/*
 * Copyright 2010-2015 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.jetbrains.kotlin.metadata.builtins;

import "core/metadata/src/metadata.proto";

option java_outer_classname = "BuiltInsProtoBuf";
option optimize_for = LITE_RUNTIME;

extend Package {
  optional int32 package_fq_name = 151;
}

extend Class {
  repeated Annotation class_annotation = 150;
}

extend Constructor {
  repeated Annotation constructor_annotation = 150;
}

extend Function {
  repeated Annotation function_annotation = 150;
}

extend Property {
  repeated Annotation property_annotation = 150;
  optional Annotation.Argument.Value compile_time_value = 151;
}

extend EnumEntry {
  repeated Annotation enum_entry_annotation = 150;
}

extend ValueParameter {
  repeated Annotation parameter_annotation = 150;
}

extend Type {
  repeated Annotation type_annotation = 150;
}

extend TypeParameter {
  repeated Annotation type_parameter_annotation = 150;
}
